# openthread

./: CMakeLists.txt
src/ncp/: ncp_uart.cpp
